--- a/styles.css
+++ b/styles.css
@@ -32,9 +32,6 @@ html, body {
     background-position: top;
     background-color: hsl(236, 41%, 93%);
 }
-.hide {
-    display: none;
-}
 .container h1 {
     padding-top: 20px;
     padding-bottom: 20px;
@@ -44,16 +41,40 @@ span {
     color: var(--Light-Grayish-Blue);
 }
 .spans {
+    display: flex;
+    gap: 2rem;
     margin: 20px auto 70px;
+    align-items: center;
+}
+.spans :nth-child(2):hover {
+    cursor: pointer;
+    opacity: 60%;
+}
+.spans :nth-child(1) {
+    margin-right: 0;
+}
+.spans :nth-child(3) {
+    margin-left: 0;
+}
+.toggle .switch {
+    height: 20px;
+    width: 20px;
+    background-color: #f6f6fe;
+    border-radius: 50%;
+    position: absolute;
+    left: 27px;
+    transition: all 200ms ease-in;
 }
 .toggle {
-    border: 1px solid hsl(236, 72%, 79%);
-    border-radius: 30px;
-    color: white;
-    padding: 4px 15px;
-    background-color: hsl(236, 72%, 79%);
-    margin-left: 10px;
-    margin-right: 10px;
+    display: flex;
+    align-items: center;
+    height: 26px;
+    width: 50px;
+    background-image: linear-gradient(to right, hsl(236deg, 72%, 79%), hsl(237deg, 63%, 64%));
+    border-radius: 1rem;
+    position: relative;
+    margin-right: 0;
+    margin-left: 0;
 }
 .tog-btn {
     border: 1px solid white;
@@ -62,13 +83,6 @@ span {
     padding: 2px 12px;
     position: relative;
     margin-right: -12px;
-}
-.toggle:hover {
-    cursor: pointer;
-    background-color: hsl(235, 49%, 91%);
-} 
-.tog-btn:active {
-    cursor: pointer;
 }
 .card {
     border: 1px solid white;
@@ -144,6 +158,20 @@ hr {
         background-position: top right;
         top: 0;
     }
+    .container::after {
+        content: url(images/bg-bottom.svg);
+        left: 0;
+        bottom: 0;
+        position: absolute;
+        z-index: 1;
+    }
+    .container::before {
+        content: url(images/bg-top.svg);
+        right: 0;
+        top: 0;
+        position: absolute;
+        z-index: -1;
+    } 
     .card-container {
         display: flex;
         justify-content: center;
